My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -770,9 +770,9 @@
                         <tr>
                             <th>Company name</th>
                             <th>Date of transaction</th>
-                            <th>Amount invested</th>
-                            <th>Amount realized</th>
-                            <th>Unrealized Value</th>
+                            <th>Invested value</th>
+                            <th>Realized value</th>
+                            <th>Unrealized value</th>
                             <th>Gross Cash Flow</th>
                         </tr>
                         <tr *ngFor="let cf of fund.grossCashflow">
