--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -784,9 +784,9 @@
                             </td>
 
                             <td>
-                                <input type="text" class="form-control" name="date" [(ngModel)]="cf.date" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #date="ngModel"/>
+                                <input type="text" class="form-control" name="date" [(ngModel)]="cf.date" placeholder="-" pattern="(0[1-9]|1[0-9]|2[0-9]|3[01])-(0[1-9]|1[012])-[1-2][0-9][0-9][0-9]" #date="ngModel"/>
                                 <div [hidden]="date.valid || date.pristine" class="alert alert-danger">
-                                    Enter date
+                                    Enter date in format dd-mm-yyyy
                                 </div>
                                 <!--<div class="input-group">-->
                                     <!--<input type='text' class="input-group-addon form-control" id="dateGrossCF" name="dateGrossCF" [(ngModel)]="cf.date" placeholder="-"/>-->
