My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -847,7 +847,7 @@
                                     SAVE
                                 </button>
                                 <button type="submit" class="btn btn-success" *ngIf="canEdit()" (click)="saveGrossCFAndRecalculatePerformance()" [disabled]="fund.id == 0 || fund.id == null">
-                                    SAVE and RECALCULATE the Key Fund Statistics
+                                    SAVE and RECALCULATE the Performance
                                 </button>
                             </div>
                         </div>
