--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -651,6 +651,7 @@
                             <th>Unrealized Value</th>
                             <th>Total Value</th>
                             <th>Multiple</th>
+                            <th>Auto calculation of the Total Value and Multiple</th>
                             <th>Gross IRR</th>
                             <th>Net IRR</th>
                         </tr>
@@ -663,38 +664,42 @@
                             </td>
 
                             <td>
-                                <input type="text" class="form-control" name="invested" [(ngModel)]="performance.invested" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #invested="ngModel"/>
+                                <input type="text" class="form-control" name="invested" [(ngModel)]="performance.invested" (ngModelChange)="autoCalculationTotalAndMultiple(performance)" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #invested="ngModel"/>
                                 <div [hidden]="invested.valid || invested.pristine" class="alert alert-danger">
                                     Only positive number could be entered
                                 </div>
                             </td>
 
                             <td>
-                                <input type="text" class="form-control" name="realized" [(ngModel)]="performance.realized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #realized="ngModel"/>
+                                <input type="text" class="form-control" name="realized" [(ngModel)]="performance.realized" (ngModelChange)="autoCalculationTotalAndMultiple(performance)" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #realized="ngModel"/>
                                 <div [hidden]="realized.valid || realized.pristine" class="alert alert-danger">
                                     Only positive number could be entered
                                 </div>
                             </td>
 
                             <td>
-                                <input type="text" class="form-control" name="unrealized" [(ngModel)]="performance.unrealized" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #unrealized="ngModel"/>
+                                <input type="text" class="form-control" name="unrealized" [(ngModel)]="performance.unrealized" (ngModelChange)="autoCalculationTotalAndMultiple(performance)" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #unrealized="ngModel"/>
                                 <div [hidden]="unrealized.valid || unrealized.pristine" class="alert alert-danger">
                                     Only positive number could be entered
                                 </div>
                             </td>
 
                             <td>
-                                <input type="text" class="form-control" name="totalValue" [(ngModel)]="performance.totalValue" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #totalValue="ngModel"/>
+                                <input type="text" class="form-control" name="totalValue" [(ngModel)]="performance.totalValue" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="performance.autoCalculation" #totalValue="ngModel"/>
                                 <div [hidden]="totalValue.valid || totalValue.pristine" class="alert alert-danger">
                                     Only positive number could be entered
                                 </div>
                             </td>
 
                             <td>
-                                <input type="text" class="form-control" name="multiple" [(ngModel)]="performance.multiple" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" #multiple="ngModel"/>
+                                <input type="text" class="form-control" name="multiple" [(ngModel)]="performance.multiple" placeholder="-" pattern="[+]?[0-9]*\.?[0-9]+" [disabled]="performance.autoCalculation" #multiple="ngModel"/>
                                 <div [hidden]="multiple.valid || multiple.pristine" class="alert alert-danger">
                                     Only positive number could be entered
                                 </div>
+                            </td>
+
+                            <td>
+                                <input type="checkbox" [(ngModel)]="performance.autoCalculation" (ngModelChange)="autoCalculationTotalAndMultiple(performance)">
                             </td>
 
                             <td>
