My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -652,8 +652,8 @@
                             <th>Total Value</th>
                             <th>Multiple</th>
                             <th>Auto calculation of the Total Value and Multiple</th>
-                            <th>Gross IRR</th>
-                            <th>Net IRR</th>
+                            <th>Gross IRR, %</th>
+                            <th>Net IRR, %</th>
                         </tr>
                         <tr *ngFor="let performance of fund.companyPerformance">
                             <td>
