My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -333,7 +333,7 @@
                             <hr>
                             <div class="row withpadding">
                                 <h4>Key fund statistics</h4>
-                                <h5>Auto calculation</h5>
+                                <h5>Auto calculation by PERFORMANCE tab</h5>
                                 <div class="onoffswitch">
                                     <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" [(ngModel)]="fund.autoCalculation" (ngModelChange)="autoCalculationStatistics()" unchecked>
                                     <label class="onoffswitch-label" for="myonoffswitch">
