--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -23,24 +23,32 @@
 
     <ul class="nav nav-tabs" id="tabs">
         <li class="active">
-            <a data-toggle="tab" href="#overview">OVERVIEW</a>
+            <a data-toggle="tab" href="#fund">FUND</a>
         </li>
         <li>
             <a data-toggle="tab" href="#performance">PERFORMANCE</a>
         </li>
         <li>
-            <a data-toggle="tab" href="#grossCashflow">GROSS CASHFLOW</a>
+            <a data-toggle="tab" href="#idd">IDD CALCULATION</a>
         </li>
         <li>
             <a data-toggle="tab" href="#netCashflow">NET CASHFLOW</a>
         </li>
     </ul>
     <div class="tab-content">
-        <div id="overview" class="tab-pane fade in active">
+        <div id="fund" class="tab-pane fade in active">
             <div style="position: relative;">
                 <div [ngBusy]="busy">
                     <br/>
-
+                    <ul class="nav nav-tabs" id="tabs-fund">
+                        <li class="active">
+                            <a data-toggle="tab" href="#overviewFund">OVERVIEW</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#performanceFund">PERFORMANCE</a>
+                        </li>
+                    </ul>
+                    <br/>
                     <div class="row withpadding">
                         <h4>Manager Details</h4>
                         <table class=" col-md-4 table-striped table-condensed">
@@ -768,8 +776,16 @@
                 </div>
             </div>
         </div>
-        <div id="grossCashflow" class="tab-pane fade">
+        <div id="idd" class="tab-pane fade">
             <br>
+            <ul class="nav nav-tabs" id="tabs-idd">
+                <li>
+                    <a data-toggle="tab" href="#performanceIdd">PERFORMANCE</a>
+                </li>
+                <li>
+                    <a data-toggle="tab" href="#grossCashflowIdd">GROSS CASHFLOW</a>
+                </li>
+            </ul>
             <br>
             <div class="row">
                 <div style="text-align: center">
